feat: Add SwapLanguageButton component

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -1,4 +1,4 @@
 {
   "hello-world": "Hello World!",
-  "swap-language": "Também disponível em Português 🇧🇷"
+  "swap-language": "Também disponível em Português <emoji>🇧🇷</emoji>"
 }
