--- a/public/static/locales/pt-BR/common.json
+++ b/public/static/locales/pt-BR/common.json
@@ -1,4 +1,4 @@
 {
   "hello-world": "Olá Mundo!",
-  "swap-language": "Also available in English 🇬🇧"
+  "swap-language": "Also available in English <emoji>🇬🇧</emoji>"
 }
